# general-study-repo

./: .gitignore  README.md
books/mml/1_linear-algebra/: figure_2.3.py  test.py  transformation_matrix.py
chatbots/: .gitignore
chatbots/torch-tutorial/: model.ipynb
computer-science-ufrr/analise-algoritmos/hash/: libbsd_queue.c  main  (+1 more)
computer-science-ufrr/comp-graf/: CMakeLists.txt  README.md
computer-science-ufrr/comp-graf/array/: array.cpp
computer-science-ufrr/comp-graf/rasterization/: circumference_rasterization.cpp  line_rasterization.h
computer-science-ufrr/comp-graf/src/: CMakeLists.txt  main.cpp
computer-science-ufrr/comp-graf/src/BezierCurve/: BezierCurve.cpp  BezierCurve.hpp  CMakeLists.txt
computer-science-ufrr/comp-graf/src/DrawWindow/: CMakeLists.txt  DrawWindow.cpp  DrawWindow.hpp
computer-science-ufrr/comp-graf/src/array/: CMakeLists.txt  array.hpp
computer-science-ufrr/comp-graf/src/array2d/: CMakeLists.txt  array2d.cpp  array2d.hpp
computer-science-ufrr/comp-graf/src/fill/: CMakeLists.txt  fill.cpp  fill.hpp
computer-science-ufrr/comp-graf/src/geometric/: CMakeLists.txt  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp
computer-science-ufrr/comp-graf/src/polygon/: CMakeLists.txt  polygon.cpp  polygon.hpp
computer-science-ufrr/comp-graf/src/rasterization/: CMakeLists.txt  CircumferenceRasterization.cpp  CircumferenceRasterization.hpp  LineRasterization.cpp  LineRasterization.hpp  circumference_rasterization.cpp  circumference_rasterization.hpp  line_rasterization.cpp  line_rasterization.hpp  rasterization.cpp  rasterization.hpp
getting-starts/raytune/: notebook.ipynb
kaggle/Processing-with-Disaster-Tweets/: model-packt.ipynb  model.ipynb
machine_learning/diffusers/: .gitignore  dyna.ipynb  lcm_lora.ipynb
machine_learning/greyhound_racing_uk/: model.ipynb
machine_learning/model_that_train_another_question_mark/: notebook.ipynb
machine_learning/video-to-video/: .gitignore  model.ipynb  model_turbo.ipynb
scripts/: dontstarve_auto_shutdown.py
ufrr/comp-graf/: .gitignore  CMakeLists.txt  main.cpp
(+91 files in other folders)
